[package]
name = "feembox"
description = "What if a feed, but it's a mailbox?"
documentation = "https://rawcdn.githack.com/nabijaczleweli/feembox/doc/feembox/index.html"
repository = "https://github.com/nabijaczleweli/feembox"
readme = "README.md"
keywords = ["rss", "feed", "mbox", "maildir"]
categories = ["email"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.1.0"
# Remember to also update in feembox.md
authors = ["наб <nabijaczleweli@gmail.com>"]
exclude = ["*.enc"]


[dependencies]
mailparse = "0.12"
tabwriter = "1.2"
feed-rs = "0.2"
unicase = "2.6"
memmap = "0.7"
clap = "2.33"
