[package]
name = "feembox"
description = "What if a feed, but it's a mailbox?"
documentation = "https://rawcdn.githack.com/nabijaczleweli/feembox/doc/feembox/index.html"
repository = "https://github.com/nabijaczleweli/feembox"
readme = "README.md"
keywords = ["rss", "feed", "mbox", "maildir"]
categories = ["email"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.1.1"
# Remember to also update in feembox.md
authors = ["наб <nabijaczleweli@nabijaczleweli.xyz>"]
exclude = ["*.enc"]


[dependencies]
linked_hash_set = "0.1"
mail-internals = "0.2"
mail-headers = "0.6"
mail-core = "0.6"
mailparse = "0.12"
tabwriter = "1.2"
hostname = "0.3"
feed-rs = "0.2"
futures = "0.1"
unicase = "2.6"
chrono = "0.4"
memmap = "0.7"
clap = "2.33"
mime = "0.3"
